# Flies

./: CMakeLists.txt  LICENSE  README.md
include/Flies/: ComponentStorage.h  ComponentStorage.inl  Entity.h  EntityPool.h  SparseSet.h  TypeInfo.h  World.h  World.inl
include/Flies/Common/: Assert.h  Macros.h  Types.h
src/: EntityPool.cpp  SparseSet.cpp  World.cpp
